syntax = "proto3";

package Aevatar.Agents.AI;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// =====================================================
// AI Agent State
// =====================================================

message AevatarAIAgentState {
  repeated AevatarChatMessage history = 1;
  map<string, string> context = 2;
  int64 total_token_used = 3;
  google.protobuf.Timestamp last_activity = 4;
  google.protobuf.Any custom_state = 100;
}

message AevatarChatMessage {
  string id = 1;
  AevatarChatRole role = 2;
  string content = 3;
  repeated ToolCall tool_calls = 4;
  ToolExecutionResult tool_result = 5;
  google.protobuf.Timestamp timestamp = 6;
  int32 token_used = 7;
  map<string, string> metadata = 8;
}

message ToolCall {
  string id = 1;
  string tool_name = 2;
  string arguments = 3;
  string type = 4;
}

message ToolExecutionResult {
  string tool_call_id = 1;
  string tool_name = 2;
  string content = 3;
  bool is_success = 4;
  string error_message = 5;
  google.protobuf.Timestamp timestamp = 6;
  google.protobuf.Duration duration = 7;
}

// =====================================================
// AI Agent Config
// =====================================================

message AevatarAIAgentConfig {
  // --- 1. 核心人设 (The Soul) ---
  string system_prompt = 1;

  // --- 2. 模型选择 (Model Selection) ---
  // 如果为空，使用全局默认配置
  optional string model = 2; 
  
  // --- 3. 核心推理参数 (Inference Parameters - MEAI Compatible) ---
  // 使用 optional 以支持 "未设置则继承默认" 的逻辑
  
  // 控制随机性 (0.0 - 2.0)
  optional float temperature = 3; 
  
  // 核采样 (0.0 - 1.0)
  optional float top_p = 4; 
  
  // 最大输出长度
  optional int32 max_output_tokens = 5; 
  
  // 存在惩罚 (-2.0 - 2.0)
  optional float presence_penalty = 6; 
  
  // 频率惩罚 (-2.0 - 2.0)
  optional float frequency_penalty = 7;
  
  // 停止序列
  repeated string stop_sequences = 8;
  
  // 随机种子 (用于复现)
  optional int64 seed = 9;

  // --- 4. 高级行为控制 (Advanced Control) ---
  
  // 是否允许并行工具调用 (Default: true)
  // MEAI: AllowMultipleToolCalls
  optional bool allow_multiple_tool_calls = 10; 

  // 响应格式: "text" or "json_object"
  // MEAI: ResponseFormat
  optional string response_format = 11;

  // --- 5. 业务扩展 (Business Extension) ---
  google.protobuf.Any custom_config = 100;
}

// =====================================================
// Core AI Types and Enums
// =====================================================

enum AevatarChatRole {
  UNSPECIFIED = 0;
  SYSTEM = 1;
  USER = 2;
  ASSISTANT = 3;
  TOOL = 4;
}

// =====================================================
// AI Agent Configuration (Framework Level)
// =====================================================

// AI Agent框架配置（包含AI行为相关的配置）
message AevatarAIAgentConfiguration {
  string model = 1;                      // 模型名称
  double temperature = 2;                // 温度参数
  int32 max_tokens = 3;                  // 最大token数
  int32 max_history = 4;                 // 对话历史最大长度
  double top_p = 5;                      // top_p采样
  double frequency_penalty = 6;          // 频率惩罚
  double presence_penalty = 7;           // 存在惩罚
}

// =====================================================
// Chat and Conversation Messages
// =====================================================

message ConversationSummary {
  string content = 1;
  repeated string key_points = 2;
  repeated string topics = 3;
  string sentiment = 4;
}

// =====================================================
// Processing Messages
// =====================================================

// Token使用情况
message AevatarTokenUsage {
  int32 prompt_tokens = 1;
  int32 completion_tokens = 2;
  int32 total_tokens = 3;
  double estimated_cost = 4;
}

// =====================================================
// Memory Events
// =====================================================

// 记忆存储事件
message AevatarMemoryStoredEvent {
  string agent_id = 1;
  string memory_type = 2; // short_term, long_term, working
  string memory_key = 3;
  google.protobuf.Any memory_value = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// 记忆检索事件
message AevatarMemoryRetrievedEvent {
  string agent_id = 1;
  string memory_type = 2;
  string query = 3;
  repeated string memory_keys = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// 记忆清理事件
message AevatarMemoryCleanupEvent {
  string agent_id = 1;
  string memory_type = 2;
  int32 items_removed = 3;
  string reason = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// =====================================================
// Chat Request/Response Messages
// =====================================================

// Chat request
message ChatRequest {
  string message = 1;
  map<string, string> context = 2;
  string request_id = 3;
  int32 max_tokens = 4;
  double temperature = 5;
}

// Chat response
message ChatResponse {
  string content = 1;
  AevatarTokenUsage usage = 2;
  repeated ProcessingStep processing_steps = 3;
  string request_id = 4;
  bool tool_called = 5;
  ToolCallInfo tool_call = 6;
}

// Tool call information
message ToolCallInfo {
  string tool_name = 1;
  map<string, string> arguments = 2;
  string result = 3;
}

// Processing step (moved from AI.Core)
message ProcessingStep {
  ProcessingStepType type = 1;
  string description = 2;
  google.protobuf.Timestamp timestamp = 3;
  string result = 4;
  map<string, string> metadata = 5;
}

// Processing step type
enum ProcessingStepType {
  PROCESSING_STEP_TYPE_UNSPECIFIED = 0;
  PROCESSING_STEP_TYPE_PREPARATION = 1;
  PROCESSING_STEP_TYPE_LLM_GENERATION = 2;
  PROCESSING_STEP_TYPE_TOOL_EXECUTION = 3;
  PROCESSING_STEP_TYPE_REASONING = 4;
  PROCESSING_STEP_TYPE_ACTION = 5;
  PROCESSING_STEP_TYPE_OBSERVATION = 6;
  PROCESSING_STEP_TYPE_STRATEGY_SELECTION = 7;
}

// =====================================================
// AI Context Messages
// =====================================================

// AI processing context
message AevatarAIContext {
  string agent_id = 1;
  string question = 2;
  string system_prompt = 3;
  google.protobuf.Any working_memory = 4;
  google.protobuf.Any agent_state = 5;
  repeated AevatarConversationEntry conversation_history = 6;
  map<string, string> metadata = 7;
}

// Conversation entry
message AevatarConversationEntry {
  string role = 1;
  string content = 2;
  google.protobuf.Timestamp timestamp = 3;
}